Fix code background color too dark

--- a/site/docs/.vuepress/styles/index.scss
+++ b/site/docs/.vuepress/styles/index.scss
@@ -6,6 +6,7 @@
 }
 
 html.dark {
+  --c-bg-lighter: #2b313a;
   --c-brand-light: #138cb3;
   --c-brand: #009dca;
   --c-tip: #1583a7;
